tests/More/Bad/11.tig
/* error- for high index not an int */
for i:=10 to " " do print("/n")


